工程改造，本地不是tomcat，请求各个服务的swagger.json
